--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="container">
 				<h1>Bard's Society</h1>
 				<h2>Just Play and relax!</h2>
-				<a href="#apply-section" class="btn-blue">Start now</a>
+				<a href="#" class="btn-blue">Start now</a>
 			</div>
 		</div>
 
