--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<a href="#" class="btn-blue">click to discover</a>
 			</div>
 			<div class="card">
-				<img src="images/piano.avif" alt="our models">
+				<img src="images/pianos.png" alt="our models">
 				<h3>Piano</h3>
 				<a href="#" class="btn-blue">click to discover</a>
 			</div>
